Remediate open SonarQube issues across AWS, Security, Code Smells, and Tests